fix e pulizia codice